# mic.ai

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  compose.yml  pyproject.toml  render.env.example  render.yaml
app/: config.py  db.py  db_models.py  jobs.py  main.py  models.py  queue.py  repository.py  rules.py  runtime.py  scheduler.py  whatsapp.py  worker.py
tests/: test_jobs.py  test_rules.py  test_webhook.py
