[project]
name = "mic-ai"
version = "0.1.0"
description = "WhatsApp-first MVP backend for persona agents"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.28.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "anyio>=4.8.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
